全局配置，首页搜索框

--- a/app.json
+++ b/app.json
@@ -1,13 +1,40 @@
 {
   "pages": [
     "pages/index/index",
-    "pages/logs/logs"
+    "pages/logs/logs",
+    "pages/carts/carts",
+    "pages/users/users"
   ],
   "window": {
     "backgroundTextStyle": "light",
-    "navigationBarBackgroundColor": "#fff",
-    "navigationBarTitleText": "WeChat",
-    "navigationBarTextStyle": "black"
+    "navigationBarBackgroundColor": "#eb4450",
+    "navigationBarTitleText": "黑马优购",
+    "navigationBarTextStyle": "white"
+  },
+  "tabBar": {
+    "selectedColor":"#E03440",
+    "list": [{
+      "pagePath": "pages/index/index",
+      "text": "首页",
+      "iconPath": "assets/icons/home.png",
+      "selectedIconPath": "assets/icons/home-o.png"
+    },
+    {
+      "pagePath": "pages/logs/logs",
+      "text": "分类",
+      "iconPath":  "assets/icons/category.png",
+      "selectedIconPath": "assets/icons/category-o.png"
+    },{
+      "pagePath": "pages/carts/carts",
+      "text": "购物车",
+      "iconPath": "assets/icons/cart.png",
+      "selectedIconPath": "assets/icons/cart-o.png"
+    },{
+      "pagePath": "pages/users/users",
+      "text": "我的",
+      "iconPath": "assets/icons/my.png",
+      "selectedIconPath": "assets/icons/my-o.png"
+    }]
   },
   "style": "v2",
   "sitemapLocation": "sitemap.json"
